# HealthRisk-AI

./: .gitignore  README.MD  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  docker-build.yml  lint.yml  testing.yml
Dashnoard/: app.py  auth.py  config.py  navigation.py
Dashnoard/assests/: styles.css
Dashnoard/components/: alerts.py  charts.py  metric_cards.py  sidebar.py  tables.py
Dashnoard/pages/: esg_dashboard.py  explaniablity_dashboard.py  (+8 more)
configs/: app_config.yaml  credit_risk.yaml  database.yaml  deployment.yaml  explanability.yaml  insurance.yaml  logging.yaml  model_config.yaml  pharma.yaml  simulation.yaml
explainability/: __init__.py  counterfactual_explnations.py  fairness_analysis.py  feature_importance.py  lime_analysis.py  model_cards.py  shap_analysis.py
notebooks/: credit_risk_modelling.ipynb  eda_clinical.ipynb  eda_financial.ipynb  explainability_analysis.ipynb  feature_engineering.ipynb  insurance_modelling.ipynb  pharma_modelling.ipynb  simulation_analysis.ipynb
simulation/: __init__.py  insurance_engine.py  portfolio_manager.py  reward_system.py  rl_environment.py  scenario_simulator.py  shock_generator.py  simulation_engine.py
tests/: __init__.py  conftest.py  test_clinical_nlp.py  test_credit_risk.py  test_data_pipeline.py  test_end_to_end_pipeline.py  test_ensemble.py  test_explaniability.py  test_feature_engineering.py  test_gnn.py  test_insurance.py  test_pharma.py  test_simulation.py  test_survival_models.py  test_tabular_models.py
utils/: config_loader.py
(+54 files in other folders)
